<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dent_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kku.mhealth.hackathon.mpaindiary.DentLoginActivity">

    <TextView
        android:text="@string/emailTxt"
        android:layout_width="83dp"
        android:layout_height="42dp"
        android:id="@+id/textView2"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText3"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        android:text="@string/emailKey" />

    <TextView
        android:text="@string/passswordTxt"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:id="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="@+id/textView2"
        android:gravity="center"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText4"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="@+id/editText3"
        app:layout_constraintRight_toRightOf="@+id/editText3"
        android:text="@string/passwordKey" />

    <Button
        android:text="@string/signInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:layout_marginStart="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:text="@string/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:layout_marginStart="64dp"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        android:layout_marginLeft="64dp"
        app:layout_constraintTop_toTopOf="@+id/button5"
        android:layout_marginEnd="64dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="64dp" />
</android.support.constraint.ConstraintLayout>
